# rays-crashing

./: .gitignore  CMakeLists.txt  LICENSE
include/: image.h  objects.h
report/: beamerthemehsrm.sty  colors.tex  report.tex  slides.tex
src/: image.cpp  main.cpp  objects.cpp
